# meow

./: .gitignore  README.md  package-lock.json  package.json  reddit-post.md
.github/workflows/: release.yml
apps/desktop/: package.json
apps/desktop/main/: main.js
apps/desktop/renderer/: next.config.js
apps/desktop/renderer/app/: globals.css  layout.js  page.js
apps/desktop/renderer/app/companion/: page.js
apps/desktop/renderer/app/eyebreak/: page.js
apps/desktop/renderer/components/: EyeBreakOverlay.jsx  FocusPal.jsx  Onboarding.jsx  Timer.jsx  TitleBar.jsx
apps/desktop/renderer/hooks/: useAudio.js  useEyeBreak.js  useTimer.js
apps/desktop/renderer/lib/: tauri-bridge.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  mouse_tracker.rs  tray.rs  windows.rs
apps/desktop/src-tauri/src/platform/: macos.rs  mod.rs
apps/landing/: package.json
apps/landing/app/: globals.css  layout.js  page.js  robots.js  sitemap.js
apps/landing/public/ph/: meow-ph-thumbnail.html  meow_hero_all_pals_scattered.html  meow_hero_and_reveal_sections.html  meow_hero_with_pal_switcher.html  meow_reveal_section_v2.html
main/: main.js  preload.js
renderer/app/: globals.css  layout.js  page.js
renderer/components/: AmbientSounds.jsx  Controls.jsx  Settings.jsx  TitleBar.jsx
scripts/: generate-sounds.js
scripts/gif/: notch-reveal.html  package-lock.json  package.json  record.mjs
(+1 files in other folders)
